--- a/webview-chat/src/app/container/chat-container/chat-header/chat-header.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-header/chat-header.component.html
@@ -4,7 +4,7 @@
     <button mat-icon-button (click)="onNewChat()">
       <ng-icon name="matAddOutline" />
     </button>
-    <button mat-icon-button (click)="onHistory()">
+    <button mat-icon-button (click)="onHistory.emit()">
       <ng-icon name="matHistoryOutline" />
     </button>
     <button mat-icon-button (click)="onSettings()">
