--- a/webview-chat/src/app/container/chat-container/chat-container.component.scss
+++ b/webview-chat/src/app/container/chat-container/chat-container.component.scss
@@ -3,15 +3,16 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-width: 360px;
 }
 
-.chat-container-header {
+.chat-container-settings {
   flex: 0 0 auto;
 }
 
 .chat-container-list-chat,
 app-message-list {
-  flex: 1 1 auto;       
+  flex: 1 1 auto;
   overflow-y: auto;
   overflow-x: hidden;
   display: flex;
@@ -21,6 +22,7 @@ app-message-list {
 }
 
 .chat-container-message-input {
-  flex: 0 0 auto; 
+  min-width: 360px;
+  flex: 0 0 auto;
   display: block;
 }
