error return ollama generate response and chat response pending resolve, ollama returns JSONL, no JSON

--- a/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
@@ -5,8 +5,8 @@
       <div class="form-group">
         <label for="modelRefactors">Select model refactor</label>
         <select [(ngModel)]="modelRefactors" name="modelRefactors" id="modelRefactors">
-          @for (model of chatStore.models()?.models; track model) {
-            <option [ngValue]="model.model">{{ model.name }}</option>
+          @for (model of chatStore.models()?.data; track model) {
+            <option [ngValue]="model.id">{{ model.id }}</option>
           }
         </select>
       </div>
@@ -14,8 +14,8 @@
       <div class="form-group">
         <label for="modelCompletions">Select model completion</label>
         <select [(ngModel)]="modelCompletions" name="modelCompletions" id="modelCompletions">
-          @for (model of chatStore.models()?.models; track model) {
-            <option [ngValue]="model.model">{{ model.name }}</option>
+          @for (model of chatStore.models()?.data; track model) {
+            <option [ngValue]="model.id">{{ model.id }}</option>
           }
         </select>
       </div>
