--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
@@ -1,6 +1,6 @@
 <div class="container-input">
   <mat-card class="message-input-container" [class.border-animated]="isLoading">
-    
+
     <div class="input-wrapper">
       <div class="message-field">
         <textarea
@@ -19,8 +19,8 @@
     <mat-card-actions class="actions-container">
       <div class="actions-selects">
         <select [(ngModel)]="modelText" class="select-models-field" [disabled]="isLoading">
-          @for (model of chatStore.models()?.models; track model) {
-            <option [ngValue]="model.model">{{ model.name }}</option>
+          @for (model of chatStore.models()?.data; track model) {
+            <option [ngValue]="model.id">{{ model.id }}</option>
           }
         </select>
 
