--- a/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
+++ b/webview-chat/src/app/container/chat-container/message-input/message-input.component.html
@@ -13,7 +13,7 @@
     <mat-card-actions class="actions-container">
       <div class="actions-selects">
         <select [(ngModel)]="modelText" class="select-models-field" [disabled]="isLoading">
-          @for (model of chatStore.models()?.data; track model) {
+          @for (model of chatStore.models()?.models; track model) {
           <option [ngValue]="model.model">{{ model.name }}</option>
           }
         </select>
