update code providers ollama openai

--- a/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
@@ -1,6 +1,16 @@
 <div class="container-settings">
   <mat-card class="chat-settings">
     <h3>Settings</h3>
+
+    <div class="form-group">
+      <label for="provider">Select provider</label>
+      <select [(ngModel)]="provider" name="provider" id="provider">
+        @for (model of chatStore.models()?.models; track model) {
+        <option [ngValue]="model.model">{{ model.name }}</option>
+        }
+      </select>
+    </div>
+
     <form class="chat-settings-form">
       <div class="form-group">
         <label for="baseUrl">Base url provider</label>
