--- a/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
@@ -37,7 +37,7 @@
         </select>
       </div>
 
-      <button type="button" class="chat-settings-save" (click)="onSave">Save</button>
+      <button type="button" class="chat-settings-save" (click)="onSave()">Save</button>
     </form>
   </mat-card>
 
