--- a/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
@@ -7,7 +7,7 @@
         <label for="provider">Select provider</label>
         <select [(ngModel)]="provider" name="provider" id="provider">
           @for (provider of settingsStore.providers(); track provider) {
-          <option [ngValue]="provider.id">{{ provider.id }}</option>
+          <option [value]="provider.id">{{ provider.id }}</option>
           }
         </select>
       </div>
@@ -23,7 +23,7 @@
         <label for="modelRefactors">Select model refactor</label>
         <select [(ngModel)]="modelRefactors" name="modelRefactors" id="modelRefactors">
           @for (model of chatStore.models()?.models; track model) {
-          <option [ngValue]="model.model">{{ model.name }}</option>
+          <option [value]="model.model">{{ model.name }}</option>
           }
         </select>
       </div>
@@ -32,7 +32,7 @@
         <label for="modelCompletions">Select model completion</label>
         <select [(ngModel)]="modelCompletions" name="modelCompletions" id="modelCompletions">
           @for (model of chatStore.models()?.models; track model) {
-          <option [ngValue]="model.model">{{ model.name }}</option>
+          <option [value]="model.model">{{ model.name }}</option>
           }
         </select>
       </div>
