fixing repository chats

--- a/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
+++ b/webview-chat/src/app/container/chat-container/chat-settings/chat-settings.component.html
@@ -27,7 +27,7 @@
       </div>
       }
       <div class="form-group">
-        <label for="modelRefactors">Select model refactor</label>
+        <label for="modelRefactors">Select model refactor/agent</label>
         <select formControlName="modelRefactors" name="modelRefactors" id="modelRefactors">
           @for (model of chatStore.models()?.models; track model) {
           <option [value]="model.model">{{ model.name }}</option>
